--- a/regis/templates/index.html
+++ b/regis/templates/index.html
@@ -1,1 +1,5 @@
-<h1>It is working!</h1>
+<h1>Please register Yourself</h1>
+<form method="post"  > {% csrf_token %}
+	{{ form.as_ul }}
+    <button type= "Submit"> Register </button>
+</form>
