--- a/regis/templates/index.html
+++ b/regis/templates/index.html
@@ -1,5 +1,5 @@
 <h1>Please register Yourself</h1>
-<form method="post"  > {% csrf_token %}
-	{{ form.as_ul }}
+<form method="post" style="align:center"  > {% csrf_token %}
+	{{ form.as_p }}
     <button type= "Submit"> Register </button>
 </form>
